# chip8-emulator-cpp

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  app.h  config.h  dick.html  main.cpp
chip8/: chip8.cpp  chip8.h
cores/chip8/: chip8.cpp  chip8.h
cores/schip/: schip.cpp  schip.h
ui/: ui.cpp  ui.h
